# PomodoroTimer

./: .gitignore  BUILD.md  BUILD_LOCAL.md  CHANGELOG.md  Makefile  README.md  make_icon.py  pomodoro_timer.py  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: release.yml
