[build-system]
requires = ["setuptools", "py2app"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pomodoro-timer"
version = "1.1.0"
description = "🍅 番茄时钟 — macOS 菜单栏 Pomodoro Timer"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "newjokker"},
]
keywords = ["pomodoro", "timer", "macos", "menubar", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X :: Cocoa",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
]
urls = {Homepage = "https://github.com/newjokker/PomodoroTimer", Source = "https://github.com/newjokker/PomodoroTimer", Releases = "https://github.com/newjokker/PomodoroTimer/releases"}

# ─── 发布打包配置 ───
# 用于构建 macOS .app 和 .dmg

[tool.py2app]
app = ["pomodoro_timer.py"]
iconfile = "icon.icns"
frameworks = ["/opt/miniconda3/lib/libffi.8.dylib"]
includes = ["ctypes"]
packages = ["rumps"]
plist = {CFBundleName = "番茄时钟", CFBundleDisplayName = "🍅 番茄时钟", CFBundleIdentifier = "com.pomodoro.timer", CFBundleVersion = "1.1.0", CFBundleShortVersionString = "1.1.0", CFBundleExecutable = "pomodoro_timer", CFBundleDevelopmentRegion = "zh_CN", LSUIElement = true}
